--- a/ABP_Library/angular/src/app/home/home.component.html
+++ b/ABP_Library/angular/src/app/home/home.component.html
@@ -23,9 +23,9 @@
         </div>
         <div class="col-md d-flex align-items-center">
           <div class="pe-0 pe-md-4">
-            <small class="text-uppercase text-muted">THE OFFICIAL GUIDE</small>
+            <small class="text-uppercase text-muted">THE OFFICIAL GUIDE </small>
             <h2 class="mb-4">Mastering ABP Framework</h2>
-            <p class="mb-4">Written by the creator of the ABP Framework, this book will help you gain a complete
+            <p class="mb-4">Written 1q2w3E* by the creator of the ABP Framework, this book will help you gain a complete
               understanding of the framework and modern web application development techniques.</p>
             <div class="mb-4">
               <a href="https://www.amazon.com/gp/product/B097Z2DM8Q/ref=dbs_a_def_rwt_hsch_vapi_tkin_p1_i0"
